syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.user.grpc";

enum Status {
  STOCK_IN = 0;
  STOCK_OUT = 1;
}

message ProductRequest {
  int32 userId = 1;
}

message Product {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
  Status status = 4;
  repeated string colors = 5;
  map<string, string> specifications = 6;
}

message ProductResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc getProducts(ProductRequest) returns (ProductResponse);
}